# covid_tracker

./: LICENSE  Makefile  README.md  alembic.ini  config.yml  docker-compose.yml  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 0e8bc3970388_add_historical_logs_table.py
src/covid_tracker/models/: __init__.py  logs.py
