[tool.poetry]
name = "covid_tracker"
version = "1.0.0"
description = "MIT"
license = ""
authors = ["Prateek Pisat <pisatprateek12@gmail.com>"]
readme = "README.md"
packages = [
    { include = "covid_tracker", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
click = "^7.1.2"
alembic = "^1.4.3"
sqlalchemy = "^1.3.19"
pendulum = "^2.1.2"
docker-compose = "^1.27.4"
configly = {version = "^0.2.0", extras = ["yaml"]}
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.740"
ptpython = "^2.0.6"
pydocstyle = "^4.0.1"
pytest = "^5.2"
pytest-coverage = "^0.0"
sqlalchemy-stubs = "^0.3"

[tool.black]
line_length = 100

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 100
multi_line_output = 3
order_by_type = false
known_first_party = 'covid_tracker,tests'
known_standard_library = 'dataclasses'
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
